--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
@@ -44,86 +44,14 @@
             </div>
             <div id="divDDCCXTip" class="Warn" style="z-index: 999;"></div>
         </div>
-        <div id="divDDCPP" class="div_row" style="z-index: 998;">
+        <div id="divPP" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">品牌</span>
+                <span class="span_required">*</span>
+                <span id="spanPP">品牌</span>
             </div>
-            <div class="div_row_right">
-                <div id="divPPText" class="div_select_out SRK">
-                    <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divPPText" class="div_row_right">
             </div>
-            <div id="divDDCPPTip" class="Warn" style="z-index: 997;"></div>
-        </div>
-        <div id="divDDCDCDY" class="div_row" style="z-index: 996;">
-            <div class="div_row_left">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">电池电压</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divDCDYText" class="div_select_out SRK">
-                    <div id="divDCDYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanDCDY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择电池电压</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divDCDY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divDDCDCDYTip" class="Warn" style="z-index: 995;"></div>
-        </div>
-        <div id="divDDCDCRL" class="div_row" style="z-index: 994;">
-            <div class="div_row_left">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">电池容量</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divDCRLText" class="div_select_out SRK">
-                    <div id="divDCRLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanDCRL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择电池容量</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divDCRL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divDDCDCRLTip" class="Warn" style="z-index: 993;"></div>
-        </div>
-        <div id="divXJCD" class="div_row" style="z-index: 992;">
-            <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">新旧</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
-                    <div id="divXJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择新旧</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divXJ" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divXJCDTip" class="Warn" style="z-index: 991;"></div>
-        </div>
-        <div id="divSYNX" class="div_row" style="z-index: 990;">
-            <div class="div_row_left">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">使用年限</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanSYNX" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="SYNX" maxlength="9" column="SYNX" type="text" style="width: 120px" />
-                    <span class="spaninput_fontcolor">年</span>
-                </span>
-            </div>
-            <div id="divSYNXTip" class="Warn" style="z-index: 989;"></div>
+            <div id="divPPTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 988;">
             <div class="div_row_left">
@@ -161,8 +89,77 @@
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
             <div id="divSZQYTip" class="Warn" style="z-index: 983;"></div>
+        </div>
+        <div id="divXTXX" class="div_split" style="display: block; text-align: left">
+            <span class="span_split">选填信息</span>
+            <em class="em_split"></em>
+        </div>
+        <div id="divDDCDCDY" class="div_row" style="z-index: 982;">
+            <div class="div_row_left">
+                <span class="span_required">&nbsp;</span>
+                <span class="spanFWCZ">电池电压</span>
+            </div>
+            <div class="div_row_right">
+                <div id="divDCDYText" class="div_select_out SRK">
+                    <div id="divDCDYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanDCDY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择电池电压</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divDCDY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+            </div>
+            <div id="divDDCDCDYTip" class="Warn" style="z-index: 981;"></div>
+        </div>
+        <div id="divDDCDCRL" class="div_row" style="z-index: 980;">
+            <div class="div_row_left">
+                <span class="span_required">&nbsp;</span>
+                <span class="spanFWCZ">电池容量</span>
+            </div>
+            <div class="div_row_right">
+                <div id="divDCRLText" class="div_select_out SRK">
+                    <div id="divDCRLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanDCRL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择电池容量</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divDCRL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+            </div>
+            <div id="divDDCDCRLTip" class="Warn" style="z-index: 979;"></div>
+        </div>
+        <div id="divXJCD" class="div_row" style="z-index: 978;">
+            <div class="div_row_left font_two">
+                <span class="span_required">&nbsp;</span>
+                <span class="spanFWCZ">新旧</span>
+            </div>
+            <div class="div_row_right">
+                <div id="divXJText" class="div_select_out SRK" style="z-index: 978;">
+                    <div id="divXJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanXJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择新旧</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divXJ" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+            </div>
+            <div id="divXJCDTip" class="Warn" style="z-index: 977;"></div>
+        </div>
+        <div id="divSYNX" class="div_row" style="z-index: 976;">
+            <div class="div_row_left">
+                <span class="span_required">&nbsp;</span>
+                <span class="spanFWCZ">使用年限</span>
+            </div>
+            <div class="div_row_right">
+                <span id="spanSYNX" class="span_spaninput SRK" style="display: inline-block;">
+                    <input class="input_spaninput spaninput_fontcolor" id="SYNX" maxlength="9" column="SYNX" type="text" style="width: 120px" />
+                    <span class="spaninput_fontcolor">年</span>
+                </span>
+            </div>
+            <div id="divSYNXTip" class="Warn" style="z-index: 975;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
