--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/CLCX/CLCX_JC.js")"></script>
 }
 @section Section_Body {
-    <div id="divCondition" class="div_condition" style="height: 180px;">
+    <div id="divCondition" class="div_condition" style="height: 230px;">
         <div id="div_condition_body_PP" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_CX" class="div_condition_body"></div>
         <div id="div_condition_body_JG" class="div_condition_body"></div>
@@ -15,6 +15,14 @@
         <div id="div_condition_body_LC" class="div_condition_body"></div>
         <div id="div_condition_body_BSX" class="div_condition_body"></div>
         <div id="div_condition_body_CLYS" class="div_condition_body"></div>
+        <div id="div_condition_body_SF" class="div_condition_body" style="display: none;">
+            <ul id="ul_condition_body_SF" class="ul_condition_body">
+                <li class="li_condition_body_first">身份</li>
+                <li class="li_condition_body">全部</li>
+                <li class="li_condition_body">个人</li>
+                <li class="li_condition_body">商家</li>
+            </ul>
+        </div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
@@ -26,9 +34,9 @@
     </div>
     <div id="divBody" class="div_body" style="margin-top: 0;">
         <ul class="ul_body_head">
-            <li id="li_body_head_first" class="li_body_head"></li>
-            <li class="li_body_head">个人</li>
-            <li class="li_body_head">商家</li>
+            <li class="li_body_head" id="li_body_head_first" onclick="SearchByCondition('ALL')"></li>
+            <li class="li_body_head" onclick="SearchByCondition('GR')">个人</li>
+            <li class="li_body_head" onclick="SearchByCondition('SJ')">商家</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
             <ul id="ul_body_left" class="ul_body_left"></ul>
