--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
@@ -12,54 +12,38 @@
             <span class="span_split">基本信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divGQ" class="div_row">
+        <div id="divSF" class="div_row">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">身份</span>
             </div>
             <div class="div_row_right">
-                <div class="div_radio" id="div_sf_grzr">
-                    <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人</label>
+                <div class="div_radio" id="div_sf_gr">
+                    <img class="img_radio" id="img_sf_gr" /><label class="label_radio">个人</label>
                 </div>
-                <div class="div_radio" id="div_sf_sjzr">
-                    <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家</label>
+                <div class="div_radio" id="div_sf_sj">
+                    <img class="img_radio" id="img_sf_sj" /><label class="label_radio">商家</label>
                 </div>
             </div>
-            <div id="divGQTip" class="Warn" style="z-index: 999;"></div>
+            <div id="divSFTip" class="Warn" style="z-index: 1001;"></div>
         </div>
-        <div id="divMTCCX" class="div_row" style="z-index: 998">
+        <div id="divCX" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">车型</span>
+                <span id="spanCX">车型</span>
             </div>
-            <div class="div_row_right">
-                <div id="divCXText" class="div_select_out SRK">
-                    <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanCX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择车型</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divCX" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divCXText" class="div_row_right">
             </div>
-            <div id="divMTCCXTip" class="Warn" style="z-index: 997;"></div>
+            <div id="divCXTip" class="Warn" style="z-index: 998;"></div>
         </div>
-        <div id="divMTCPP" class="div_row" style="z-index: 996">
+        <div id="divPP" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">品牌</span>
+                <span class="span_required">*</span>
+                <span id="spanPP">品牌</span>
             </div>
-            <div class="div_row_right">
-                <div id="divPPText" class="div_select_out SRK">
-                    <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divPPText" class="div_row_right">
             </div>
-            <div id="divMTCPPTip" class="Warn" style="z-index: 995;"></div>
+            <div id="divPPTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 994;">
             <div class="div_row_left font_two">
@@ -114,8 +98,9 @@
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
-            <div id="divSZQYSTip" class="Warn" style="z-index: 983;"></div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 983;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
