--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
@@ -12,20 +12,20 @@
             <span class="span_split">基本信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divGQ" class="div_row">
+        <div id="divSF" class="div_row">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">身份</span>
             </div>
             <div class="div_row_right">
-                <div class="div_radio" id="div_sf_grzr">
-                    <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人</label>
+                <div class="div_radio" id="div_sf_gr">
+                    <img class="img_radio" id="img_sf_gr" /><label class="label_radio">个人</label>
                 </div>
-                <div class="div_radio" id="div_sf_sjzr">
-                    <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家</label>
+                <div class="div_radio" id="div_sf_sj">
+                    <img class="img_radio" id="img_sf_sj" /><label class="label_radio">商家</label>
                 </div>
             </div>
-            <div id="divGQTip" class="Warn" style="z-index: 1001;"></div>
+            <div id="divSFTip" class="Warn" style="z-index: 1001;"></div>
         </div>
         <div id="divDDCCX" class="div_row" style="z-index: 1000;">
             <div class="div_row_left font_two">
@@ -69,7 +69,7 @@
         <div id="divSZQY" class="div_row" style="z-index: 986;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">交易地点</span>
+                <span class="spanFWCZ">看车地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 985;">
