--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_ZXC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_ZXC.cshtml
@@ -27,56 +27,32 @@
             </div>
             <div id="divGQTip" class="Warn" style="z-index: 1001;"></div>
         </div>
-        <div id="divZXCCX" class="div_row" style="z-index: 1000;">
+        <div id="divCX" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">车型</span>
+                <span id="spanCX">车型</span>
             </div>
-            <div class="div_row_right">
-                <div id="divCXText" class="div_select_out SRK">
-                    <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanCX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择车型</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divCX" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divCXText" class="div_row_right">
             </div>
-            <div id="divZXCCXTip" class="Warn" style="z-index: 999;"></div>
+            <div id="divCXTip" class="Warn" style="z-index: 998;"></div>
         </div>
-        <div id="divZXCPP" class="div_row" style="z-index: 998;">
+        <div id="divPP" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">品牌</span>
+                <span id="spanPP">品牌</span>
             </div>
-            <div class="div_row_right">
-                <div id="divPPText" class="div_select_out SRK">
-                    <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divPPText" class="div_row_right">
             </div>
-            <div id="divZXCPPTip" class="Warn" style="z-index: 997;"></div>
+            <div id="divPPTip" class="Warn" style="z-index: 998;"></div>
         </div>
-        <div id="divZXCCC" class="div_row" style="z-index: 996;">
+        <div id="divCC" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">尺寸</span>
+                <span id="spanCC">尺寸</span>
             </div>
-            <div class="div_row_right">
-                <div id="divCCText" class="div_select_out SRK">
-                    <div id="divCCSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanCC" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择尺寸</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divCC" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divCCText" class="div_row_right">
             </div>
-            <div id="divZXCCCTip" class="Warn" style="z-index: 995;"></div>
+            <div id="divCCTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 994;">
             <div class="div_row_left font_two">
@@ -108,13 +84,13 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 991;"></div>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 990;">
+        <div id="divSZQY" class="div_row" style="z-index: 986;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">交易地点</span>
+                <span class="spanFWCZ">看车地址</span>
             </div>
             <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK" style="z-index: 989;">
+                <div id="divQYText" class="div_select_out SRK" style="z-index: 985;">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="QYCode" />
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -123,7 +99,7 @@
                     <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divDDText" class="div_select_out SRK" style="z-index: 988;">
+                <div id="divDDText" class="div_select_out SRK" style="z-index: 984;">
                     <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                         <div class="span_select_arrow"></div>
@@ -131,8 +107,9 @@
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 987;"></div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 983;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
