--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
@@ -78,7 +78,7 @@
         <div id="divSZQY" class="div_row" style="z-index: 986;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">交易地点</span>
+                <span class="spanFWCZ">看车地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 985;">
