--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/CL/CL_KC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/CL/CL_KC.css
@@ -1,4 +1,25 @@
-﻿.div_clys {width: 70px;height: 35px;border: 1px solid #cccccc;display: inline-block;padding: 5px 6px;border-radius: 4px;position: relative;margin-right: 10px;}
-.div_clys:hover {background-color: #87B53B;cursor: pointer;}
+﻿.div_clys {width: 70px;height: 35px;border: 2px solid #cccccc;display: inline-block;padding: 5px 6px;border-radius: 4px;position: relative;margin-right: 10px;}
+.div_clys:hover {background-color: #ececec;cursor: pointer;}
 .span_clys_left {width: 18px;height: 18px;display: inline-block;border: 1px solid #cccccc;}
 .span_clys_right {display: inline-block;left: 34px;bottom: 10px;position: absolute;font-size: 14px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_item{display: none;z-index: 997;background-color: #ffffff;height: 570px;border: 2px solid #cccccc;margin-top: -5px;border-radius: 2px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_item .span_row_right_jcpp{cursor: pointer;float: right;width: 20px;height: 20px;display: inline-block;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first{width: 250px;margin-left: 183px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_left{ width: 30px;height: 100%;display: inline-block;padding-left: 10px;float: left;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_left .ul_row_right_jcpp_first_left{ width: 100%;margin: 0;height: 100%;display: inline-block;padding: 0;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_left .ul_row_right_jcpp_first_left .li_row_right_jcpp_first_left{border-radius: 4px;cursor: pointer;font-size: 14px;margin-bottom: 5px;display: block;width: 18px;height: 18px;text-align: center;background-color: #bc6ba6;color: #ffffff;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_left .ul_row_right_jcpp_first_left .li_row_right_jcpp_first_left:hover{ background-color: #ad5b97;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right{ width: 205px;height: 100%;display: inline-block;padding-left: 10px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right .ul_row_right_jcpp_first_right{overflow-y: scroll; width: 100%;margin: 0;height: 525px;display: inline-block;padding: 0;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right .ul_row_right_jcpp_first_right .li_row_right_jcpp_first_right_tag{padding-left: 5px;background-color: #ececec;width: 100%;height: 25px;display: block;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right .ul_row_right_jcpp_first_right .li_row_right_jcpp_first_right_value{cursor: pointer;padding-left: 5px;width: 100%;height: 25px;display: block;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right .ul_row_right_jcpp_first_right .li_row_right_jcpp_first_right_value:hover{ background-color: #000000;opacity: 0.7;color: #ffffff;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_second{width: 200px;margin-left: -5px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_second .ul_row_right_jcpp_second{ overflow-y: scroll;width: 100%;margin: 0;height: 525px;display: inline-block;padding: 0;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_second .ul_row_right_jcpp_second .li_row_right_jcpp_second{cursor: pointer;padding-left: 5px;width: 100%;height: 25px;display: block;overflow: hidden;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_second .ul_row_right_jcpp_second .li_row_right_jcpp_second:hover{ background-color: #000000;opacity: 0.7;color: #ffffff;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third{width: 260px;margin-left: -5px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third{ overflow-y: scroll;width: 100%;margin: 0;height: 525px;display: inline-block;padding: 0;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third .li_row_right_jcpp_third{cursor: pointer;padding-left: 5px;width: 100%;height: 25px;display: block;overflow: hidden;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third .li_row_right_jcpp_third:hover{ background-color: #000000;opacity: 0.7;color: #ffffff;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_item .p_row_right_jcpp{ padding: 5px 10px;color: #bc6ba6;width: 100%;height: 40px;display: block;}
